--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -4,7 +4,7 @@ en:
       index:
         admin: "ADMIN / Platforms"
         platform: "Platform"
-        hot_wallet: "Hot wallet"
+        wallet: "Hot wallet"
         last_scanned: "Last scanned block"
     withdrawals:
       index:
