--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,6 +1,6 @@
 en:
-  app_name: "TokenStudio"
-  from_mail: "TokenStudio <dj@shitcoin.jp>"
+  app_name: "NewArt Technology"
+  from_mail: "NewArt Technology <support@newart-tech.com>"
   user_mailer:
     deposit_email:
       subject: "New Deposit: %{amount} %{asset_name} have been deposited"
@@ -73,7 +73,7 @@ en:
       account: "Account History"
       log_out: "Log Out"
       log_in: "Log In"
-      coypright_2018: "Coypright © 2018 Shitcoin Japan"
+      coypright_2018: "© 2018 NewArt Technology Co., Ltd."
       company: "Company"
       contact: "Contact"
       resources: "Resources"
