Update localization for Japanese

--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -68,7 +68,7 @@ ja:
       withdrawals: "取引"
       assets: "資産"
       english: "English"
-      japanese: "日本語"
+      japanese: "Japanese"
       my_balances: "残高"
       account: "アカウント履歴"
       log_out: "Log Out"
