--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -9,7 +9,7 @@ ja:
     airdrop:
       subject: "%{amount} %{asset_name} はあなたのアカウントに振込されました。"
     authorization_code:
-      subject: "ログインするためのリンク"
+      subject: "ログインリンク"
   admin:
     platforms:
       index:
@@ -139,7 +139,7 @@ ja:
   pages:
     welcome:
       welcome_to: "NewArt Technologyへようこそ"
-      24hvolume: "最近２４時間以内、%{amount} の資産を私たちのパートナーに振込しました"
+      24hvolume: "最近２４時間以内、私たちのパートナーのため、%{amount} の資産を処理しました。"
       submit_existing: "存在のトークンを提出する"
       sounds_good: パートナーになる！
       create_token: トークン作成
@@ -163,3 +163,4 @@ ja:
       memo_1: "メモ"
       amount_3: "数量"
       check: "処理を確認する"
+  change_email: "メール変更"
