--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -138,15 +138,15 @@ en:
       edit: "Edit"
   pages:
     welcome:
-      welcome_to: "We help to attach monetary value to crypto-tokens."
+      welcome_to: "We help you #BUIDL."
       24hvolume: "%{amount} volume in the last 24h."
       submit_existing: "submit existing token"
       sounds_good: Become our partner!
       create_token: Create Token
       or: or
-      featured: "Featured Assets"
+      featured: "Featured Projects"
       view_details: "View details »"
-      browse_all: "Browse all assets"
+      browse_all: "Browse all projects"
     contact:
       contact_1: "Contact"
       feel_free_to: "Feel free to call us at any time."
