change landing text

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -138,7 +138,7 @@ en:
       edit: "Edit"
   pages:
     welcome:
-      welcome_to: "We help you #BUIDL."
+      welcome_to: "We back your shitty tokens..."
       24hvolume: "%{amount} volume in the last 24h."
       submit_existing: "submit existing token"
       sounds_good: Become our partner!
