--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -73,7 +73,7 @@ en:
       account: "Account History"
       log_out: "Log Out"
       log_in: "Log In"
-      coypright_2018: "© 2018 NewArt Technology Co., Ltd."
+      copyright: "© %{year} %{company}"
       company: "Company"
       contact: "Contact"
       resources: "Resources"
